--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,10 @@ Flask-CORS==4.0.0
 SQLAlchemy==2.0.21
 Werkzeug==2.3.7
 pandas==2.0.3
-requests==2.31.0 
+requests==2.31.0
+langgraph==0.5.4
+groq==0.4.2
+python-dotenv==1.0.1 
+fastapi>=0.100.0
+pydantic>=2.7.4
+langchain-core>=0.1.0 
