Milestone 5 : LLM Integration, Business Logic, Updated with ChromaDB(Bonus)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,7 @@ groq==0.4.2
 python-dotenv==1.0.1 
 fastapi>=0.100.0
 pydantic>=2.7.4
-langchain-core>=0.1.0 
+langchain-core>=0.1.0
+numpy==1.24.3
+chromadb==0.4.22
+sentence-transformers==2.2.2 
